# ecommerce

./: .gitignore  Dockerfile  README.md  celery_worker.py  docker-compose.yaml  pyproject.toml  start.sh  start_worker.sh  temp.py  test_login.py
app/: celery_app.py  main.py
app/api/v1/: admin.py  auth.py  chat.py  schemas.py  status.py  websocket.py
app/core/: config.py  database.py  security.py
app/frontend/: admin_dashboard.py  customer_ui.py
app/graph/: nodes.py  state.py  tools.py  workflow.py
app/models/: __init__.py  audit.py  knowledge.py  message.py  order.py  refund.py  user.py
app/services/: refund_service.py
app/tasks/: __init__.py  refund_tasks.py
app/websocket/: __init__.py  manager.py
migrations/: env.py
migrations/versions/: 567ce3db9d79_add_user_and_order_tables.py  6ee40b0ef47f_add_password_hash_and_updated_at_to_.py  9ff6463efa95_init_v2.py  d4c33985c815_add_user_and_order_tables.py  f84a99d62fad_v4_0_add_message_cards_and_audit_logs_.py
scripts/: etl_policy.py  seed_data.py  seed_large_data.py  verify_db.py
test/: test_api_complete.py  test_infra.py  test_refund_rules.py  test_refund_subgraph.py  test_refund_tools.py  test_users.py  test_v1_agent.py  test_v2_complete.py  test_v2_logic.py  test_v3_complete.py  test_v4_complete.py
