[tool.poetry]
name = "ecommerce-agent"
version = "0.1.0"
description = "AI Agent System"
authors = ["Dev <wangweiqiang24@mails.ucas.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
python-multipart = "^0.0.21"
sqlmodel = "^0.0.31"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
pgvector = "^0.4.2"
pydantic-settings = "^2.12.0"
httpx = "^0.28.1"
redis = "^7.1.0"
langchain = "^1.2.3"
langchain-openai = "^1.1.7"
langgraph = "^1.0.5"
pytest = "^9.0.2"
alembic = "^1.18.0"
langchain-community = "^0.4.1"
pypdf = "^6.6.0"
tenacity = "^9.1.2"
pyjwt = "^2.10.1"
langgraph-checkpoint-redis = "^0.3.2"
celery = "^5.6.2"
websockets = "^14.1"
gradio = "^6.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "3.2.2"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
black = "^25.12.0"
isort = "^7.0.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# 确保 asyncio 插件使用 session 级别的 loop 作用域
asyncio_default_test_loop_scope = "session"